--- a/src/main/resources/cz/vse/seka01_semestralka/main/home.fxml
+++ b/src/main/resources/cz/vse/seka01_semestralka/main/home.fxml
@@ -57,12 +57,12 @@
         </HBox>
       <SplitPane dividerPositions="0.3" GridPane.rowIndex="1">
          <items>
-            <ListView fx:id="panelVychodu"/>
-              <TextArea fx:id="vystup" editable="false">
-                  <padding>
-                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <ListView fx:id="panelVychodu" onMouseClicked="#klikPanelVychodu"/>
+             <TextArea fx:id="vystup" editable="false">
+                 <padding>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                   </padding>
-              </TextArea>
+             </TextArea>
          </items>
       </SplitPane>
     </children>
