--- a/src/main/resources/cz/vse/seka01_semestralka/main/home.fxml
+++ b/src/main/resources/cz/vse/seka01_semestralka/main/home.fxml
@@ -12,13 +12,14 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.vse.seka01_semestralka.main.HomeController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.vse.seka01_semestralka.main.HomeController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" />
     </columnConstraints>
@@ -29,12 +30,12 @@
         <RowConstraints vgrow="NEVER" />
     </rowConstraints>
     <children>
-        <MenuBar prefHeight="25.0" prefWidth="599.0" GridPane.columnSpan="2147483647">
+        <MenuBar GridPane.columnSpan="2147483647">
             <menus>
                 <Menu mnemonicParsing="false" text="Hra">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#ukoncitHru" text="Ukončit" />
-                        <MenuItem onAction="#napovedaKlik" text="Nápověda"/>
+                        <MenuItem onAction="#napovedaKlik" text="Nápověda" />
                     </items>
                 </Menu>
             </menus>
@@ -74,6 +75,14 @@
          <content>
             <HBox alignment="TOP_CENTER">
                <children>
+                  <TitledPane alignment="TOP_LEFT" animated="true" maxHeight="100.0" text="Brašna">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <ListView fx:id="panelBrasny" maxHeight="100.0"/>
+                           </children></AnchorPane>
+                     </content>
+                  </TitledPane>
                   <Pane>
                      <children>
                         <ImageView fitHeight="214.0" fitWidth="343.0" pickOnBounds="true" preserveRatio="true">
@@ -88,6 +97,14 @@
                         </ImageView>
                      </children>
                   </Pane>
+                  <TitledPane alignment="TOP_LEFT" animated="true" maxHeight="100.0" text="Položky">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <ListView fx:id="panelPolozky" maxHeight="100.0"/>
+                           </children></AnchorPane>
+                     </content>
+                  </TitledPane>
                </children>
             </HBox>
          </content>
