Přidání panelu položek v prostoru

--- a/src/main/resources/cz/vse/seka01_semestralka/main/home.fxml
+++ b/src/main/resources/cz/vse/seka01_semestralka/main/home.fxml
@@ -101,7 +101,7 @@
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ListView fx:id="panelPolozky" maxHeight="100.0"/>
+                              <ListView fx:id="panelPolozek" maxHeight="100.0"/>
                            </children></AnchorPane>
                      </content>
                   </TitledPane>
